<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST150_Recipe_t" Id="{1c99e3e7-473f-4f4c-b281-f795b0cfb86f}">
    <Declaration><![CDATA[TYPE ST150_Recipe_t :
STRUCT
    USS_ErrorTime_ms : DINT; // timeout of the start signal
    USS_Type         : SINT; // byte code to send to the USS before welding
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>